Get rid of hardcoded container in elements

--- a/loop-io/one-liner.html
+++ b/loop-io/one-liner.html
@@ -27,15 +27,8 @@
 
         // ELEMENTS
         let _container = document.getElementById('container');
-
-        // ANIMATION OBJECTS
-        let ot;
-        let tt;
-        let bt;
-
-        // TEMPLATE ELEMENTS
-        texts.push(new TextBlock("text1"));
-        loops.push(new VideoLoop("bg"));
+        texts.push(new TextBlock("text1", _container));
+        loops.push(new VideoLoop("bg", _container));
 
         // PLAYOUT FUNCTIONS
 
